# tcc-monolito-ddd-fastapi-estoque

./: .alembic.ini  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  create_structure.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 27efea121cf9_feat_initial_models.py  b95b898a77cf_feat_models.py  e220c1f33189_feat_models.py
scripts/: seed_data.py  setup_database.py
src/: __init__.py  config.py  main.py
src/api/: dependencies.py  middleware.py
src/api/routers/: __init__.py  auth_routes.py  estoque.py  estoque_routes.py  health.py  movimentacoes.py  produtos.py  produtos_routes.py  relatorios_routes.py  usuarios_routes.py
src/estoque/application/dto/: estoque_dto.py
src/estoque/application/services/: estoque_application_service.py  produto_application_service.py
src/estoque/domain/entities/: estoque_produto.py  produto.py
src/estoque/domain/repositories/: estoque_repository.py  produto_repository.py
src/estoque/domain/services/: estoque_service.py
src/estoque/domain/value_objects/: quantidade.py  sku.py
src/estoque/infrastructure/models/: estoque_model.py  produto_model.py
src/estoque/infrastructure/repositories/: sqlalchemy_estoque_repository.py  sqlalchemy_produto_repository.py
src/identidade/application/dto/: auth_dto.py  usuario_dto.py
src/identidade/application/services/: auth_application_service.py  usuario_application_service.py
src/identidade/domain/entities/: usuario.py
src/identidade/domain/repositories/: usuario_repository.py
src/identidade/infrastructure/models/: usuario_model.py
src/identidade/infrastructure/repositories/: sqlalchemy_usuario_repository.py
src/identity/application/dto/: usuario_dto.py
src/identity/application/services/: auth_application_service.py  usuario_application_service.py
src/identity/domain/entities/: usuario.py
src/identity/domain/repositories/: usuario_repository.py
src/identity/domain/value_objects/: email.py  permissao.py
src/identity/infrastructure/repositories/: sqlalchemy_usuario_repository.py
src/inventory/application/dto/: estoque_dto.py  produto_dto.py
src/inventory/application/services/: estoque_application_service.py  produto_application_service.py
src/inventory/domain/entities/: estoque_produto.py  produto.py
src/inventory/domain/repositories/: estoque_repository.py  produto_repository.py
src/inventory/domain/services/: estoque_service.py
src/inventory/domain/value_objects/: quantidade.py
src/inventory/infrastructure/repositories/: sqlalchemy_estoque_repository.py  sqlalchemy_produto_repository.py
src/produto/application/services/: produto_application_service.py
src/produto/domain/entities/: produto.py
src/produto/domain/repositories/: produto_repository.py
src/produto/domain/value_objects/: unidade_medida.py
src/produto/infrastructure/models/: produto_model.py
src/produto/infrastructure/repositories/: sqlalchemy_produto_repository.py
src/shared/application/dto/: base.py
(+8 files in other folders)
